# NinjaMasters

./: .gitignore  CMakeLists.txt  NinjaProject.sublime-workspace  README.md  bc66332.cpp  bch.cpp  bck.cpp  bcmain.cpp  bz5270.cpp  bz66332.cpp  bzh.cpp  bzk.cpp  bzmain.cpp  main.cpp
include/: E5270Interface.hpp  EmptyInterface.hpp  HP66332Interface.hpp  HamegInterface.hpp  KeithleyInterface.hpp  PSUInterface.hpp  argparse.h  bchelper.hpp  bzhelper.hpp  cxxopts.hpp
include/CommunicationInterfaces/: GpibDevice.hpp  LinuxSerialDevice.hpp  SerialDevice.hpp  visawrapper.h
include/PowerSupplyInterfaces/: E5270Interface.hpp  EmptyInterface.hpp  HP66332Interface.hpp  HamegInterface.hpp  KeithleyInterface.hpp  PsuInterface.hpp  W5000Interface.hpp
include/Util/: TimerUtil.hpp
include/VISA/VisaCom/Primary Interop Assemblies/: Ivi.Visa.Interop.config
include/VISA/WinNT/Include/: visa32.bas  visa32.cs  visa32.vb
include/VISA/WinNT/Lib_x64/msc/: nivisa64.lib  visa64.lib
include/VISA/WinNT/NIvisa/: Examples.lnk  ni-visa.chm
include/VISA/WinNT/agvisa/Lib_x64/msc/: agvisa32.lib  agvisaext.lib  visa32.lib  visaext.lib
include/VISA/WinNT/agvisa/lib/msc/: agvisaext.lib
include/VISA/WinNT/lib/msc/: agvisa32.lib  visa32.lib  visaext.lib
src/: CMakeLists.txt  E5270Interface.cpp  EmptyInterface.cpp  HP66332Interface.cpp  HamegInterface.cpp  KeithleyInterface.cpp  PSUInterface.cpp  SerialPortDemo.cpp  argparse.cpp  bchelper.cpp  bcmain.cpp  bzhelper.cpp  bzmain.cpp  visawrapper.cpp
src/CommunicationInterfaces/: CMakeLists.txt  GpibDevice.cpp  LinuxSerialDevice.cpp  SerialDevice.cpp  visawrapper.cpp
src/PowerSupplyInterfaces/: CMakeLists.txt  E5270Interface.cpp  EmptyInterface.cpp  HP66332Interface.cpp  HamegInterface.cpp  KeithleyInterface.cpp  PsuInterface.cpp  W5000Interface.cpp
src/Util/: CMakeLists.txt  TimerUtil.cpp
testdata/: 66332test.tvi  HP66332Sweep1_100000uHz.tvi  HP66332Sweep1_10000uHz.tvi  HP66332Sweep1_200000uHz.tvi  HP66332Sweep1_20000uHz.tvi  HP66332Sweep1_500000uHz.tvi  HP66332Sweep1_50000uHz.tvi  HP66332Sweep1_5000uHz.tvi  HP66332Sweep1_80000uHz.tvi  HP66332Sweep1_8000uHz.tvi  KeithleyTest.tvi  Sweeptest_100000uHz.tvi  Sweeptest_10000uHz.tvi  Sweeptest_1000uHz.tvi  Sweeptest_101uHz.tvi  Sweeptest_10MHz.tvi  Sweeptest_10mHz2.tvi  Sweeptest_11000uHz.tvi  Sweeptest_140uHz.tvi  Sweeptest_20000uHz.tvi  Sweeptest_2000uHz.tvi  Sweeptest_200uHz.tvi  Sweeptest_500000uHz.tvi  Sweeptest_50000uHz.tvi  Sweeptest_5000uHz.tvi  Sweeptest_500uHz.tvi  Sweeptest_5Tone500000uHz.tvi  Sweeptest_5Tone5270.tvi  Sweeptest_80000uHz.tvi  Sweeptest_800uHz.tvi  finit66332a.tvi  hamegtest.tvi  init66332a.tvi  test100mA.tvi  test66332.tvi
testing/HP66332/: KeithleyCycle44.tvi  KeithleySweep4.bat  KeithleySweep44_100000uHz.tvi  KeithleySweep44_200000uHz.tvi  KeithleySweep44_500000uHz.tvi  KeithleySweep44_500000uHz3tone.tvi
testing/Hameg/: KeithleyCycle44.tvi  KeithleySweep4.bat  KeithleySweep44_100000uHz.tvi  KeithleySweep44_200000uHz.tvi  KeithleySweep44_500000uHz.tvi  KeithleySweep44_500000uHz3tone.tvi
testing/Keithley/: .tvi  KeithleyCycle44.tvi  KeithleySweep4.bat  KeithleySweep44_100000uHz.tvi  KeithleySweep44_200000uHz.tvi  KeithleySweep44_500000uHz.tvi  KeithleySweep44_500000uHz3tone.tvi  KeithleySweep4_100000uHz.tvi  KeithleySweep4_200000uHz.tvi  KeithleySweep4_500000uHz.tvi
tests/: Test.bat
