cmake_minimum_required(VERSION 3.0.0)
project(Masters VERSION 3.0.0)

SET(CMAKE_CXX_FLAGS  "-Weffc++  -Wextra -pedantic -Wall -std=c++11 -Werror -Wno-unused-parameter -Wno-unused-variable -Wno-unused-but-set-variable")

include_directories(include)
include_directories(src)

add_library(bchelper src/bchelper.cpp)
add_library(bzhelper src/bzhelper.cpp)
add_library(visawrapper src/visawrapper.cpp)
add_library(visawrapper_debug src/visawrapper.cpp)
add_library(keithley src/KeithleyInterface.cpp)
add_library(keithley_debug src/KeithleyInterface.cpp)
add_library(hameg src/HamegInterface.cpp)
add_library(hameg_debug src/HamegInterface.cpp)
add_library(hp66332 src/HP66332Interface.cpp)
add_library(hp66332_debug src/HP66332Interface.cpp)
add_library(e5270 src/E5270Interface.cpp)
add_library(e5270_debug src/E5270Interface.cpp)
add_library(psu src/PSUInterface.cpp)
add_library(psu_debug src/PSUInterface.cpp)

target_link_libraries(visawrapper ${CMAKE_SOURCE_DIR}/include/VISA/WinNT/lib/msc/visa32.lib ${CMAKE_SOURCE_DIR}/include/VISA/WinNT/Lib_x64/msc/visa64.lib)
target_link_libraries(visawrapper_debug ${CMAKE_SOURCE_DIR}/include/VISA/WinNT/lib/msc/visa32.lib ${CMAKE_SOURCE_DIR}/include/VISA/WinNT/Lib_x64/msc/visa64.lib)
target_link_libraries(keithley visawrapper)
target_link_libraries(keithley_debug visawrapper_debug)
target_link_libraries(hameg visawrapper)
target_link_libraries(hameg_debug visawrapper_debug)
target_link_libraries(hp66332 visawrapper)
target_link_libraries(hp66332_debug visawrapper_debug)
target_link_libraries(e5270 visawrapper)
target_link_libraries(e5270_debug visawrapper_debug)
target_link_libraries(psu visawrapper)
target_link_libraries(psu_debug visawrapper_debug)

target_compile_definitions(visawrapper_debug PUBLIC DEBUG=1)
target_compile_definitions(keithley_debug PUBLIC DEBUG=1)
target_compile_definitions(hameg_debug PUBLIC DEBUG=1)
target_compile_definitions(hp66332_debug PUBLIC DEBUG=1)
target_compile_definitions(e5270_debug PUBLIC DEBUG=1)
target_compile_definitions(psu_debug PUBLIC DEBUG=1)

## Battery Cycling Executables
add_executable(bc bcmain.cpp)
target_link_libraries(bc bchelper visawrapper psu keithley hameg hp66332)
add_executable(bc_debug bcmain.cpp)
target_link_libraries(bc_debug bchelper visawrapper_debug psu_debug keithley_debug hameg_debug hp66332_debug)

## Imepedance Measurement Executables
add_executable(bz bzmain.cpp)
target_link_libraries(bz bzhelper visawrapper psu keithley hameg hp66332 e5270)
add_executable(bz_debug bzmain.cpp)
target_link_libraries(bz_debug bzhelper visawrapper_debug psu_debug keithley_debug hameg_debug hp66332_debug e5270_debug)

