# Power Supply Interfaces
add_library(keithley KeithleyInterface.cpp)
add_library(keithley_debug KeithleyInterface.cpp)
add_library(hameg HamegInterface.cpp)
add_library(hameg_debug HamegInterface.cpp)
add_library(hp66332 HP66332Interface.cpp)
add_library(hp66332_debug HP66332Interface.cpp)
add_library(e5270 E5270Interface.cpp)
add_library(e5270_debug E5270Interface.cpp)
add_library(Psu PsuInterface.cpp)
add_library(Psu_debug PsuInterface.cpp)

targelink_libraries(keithley visawrapper)
targelink_libraries(keithley_debug visawrapper_debug)
targelink_libraries(hameg visawrapper)
targelink_libraries(hameg_debug visawrapper_debug)
targelink_libraries(hp66332 visawrapper)
targelink_libraries(hp66332_debug visawrapper_debug)
targelink_libraries(e5270 visawrapper)
targelink_libraries(e5270_debug visawrapper_debug)
targelink_libraries(Psu visawrapper)
targelink_libraries(Psu_debug visawrapper_debug)

targecompile_definitions(keithley_debug PUBLIC DEBUG=1)
targecompile_definitions(hameg_debug PUBLIC DEBUG=1)
targecompile_definitions(hp66332_debug PUBLIC DEBUG=1)
targecompile_definitions(e5270_debug PUBLIC DEBUG=1)
targecompile_definitions(Psu_debug PUBLIC DEBUG=1)
