# Power Supply Interfaces
add_library(keithley KeithleyInterface.cpp)
add_library(keithley_debug KeithleyInterface.cpp)
add_library(hameg HamegInterface.cpp)
add_library(hameg_debug HamegInterface.cpp)
add_library(hp66332 HP66332Interface.cpp)
add_library(hp66332_debug HP66332Interface.cpp)
add_library(e5270 E5270Interface.cpp)
add_library(e5270_debug E5270Interface.cpp)
add_library(Psu PsuInterface.cpp)
add_library(Psu_debug PsuInterface.cpp)

target_link_libraries(keithley )
target_link_libraries(keithley_debug )
target_link_libraries(hameg )
target_link_libraries(hameg_debug )
target_link_libraries(hp66332 )
target_link_libraries(hp66332_debug )
target_link_libraries(e5270 )
target_link_libraries(e5270_debug )
target_link_libraries(Psu linuxdevice serialdevice)
target_link_libraries(Psu_debug linuxdevice_debug serialdevice_debug)

target_compile_definitions(keithley_debug PUBLIC DEBUG=1)
target_compile_definitions(hameg_debug PUBLIC DEBUG=1)
target_compile_definitions(hp66332_debug PUBLIC DEBUG=1)
target_compile_definitions(e5270_debug PUBLIC DEBUG=1)
target_compile_definitions(Psu_debug PUBLIC DEBUG=1)
